Added properties, fixed repos