@@ -1,15 +1,12 @@
 package com.lucaskalita.airlines.messages;
 
 import com.lucaskalita.airlines.exceptions.WrongMessageIDException;
-import com.lucaskalita.airlines.users.User;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,40 +29,28 @@ public class MessageService {
         Message savedMessage = messageRepository.save(message);
         return messageMapper.fromEntityToDto(savedMessage);
     }
-    public List<MessageDTO> findAllMessages() {
-        log.trace("Searching for all Messages");
-        return messageRepository.findAll()
+
+    public List<MessageDTO> findAllSentMessagesToUser(String username) {
+        log.trace("Searching for all Messages sent to me by {}", username);
+        return messageRepository.findAllMessagesByReceiverUsername(username)
                 .stream()
                 .map(messageMapper::fromEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public List<MessageDTO> findAllSentMessages(User user) {
-        log.trace("Searching for all Messages sent to me by {}", user);
-        return messageRepository.findAll()
-                .stream()
-                .filter(x -> x.getReceiver().equals(user))
-                .map(messageMapper::fromEntityToDto)
-                .collect(Collectors.toList());
-    }
-
-    public List<MessageDTO> findAllMessagesSentByUser(User user) {
+    public List<MessageDTO> findAllMessagesSentByUser(String username) {
         log.trace("Searching for all Messages sent by me");
-        return messageRepository.findAll()
+        return messageRepository.findAllMessagesBySenderUsername(username)
                 .stream()
-                .filter(x -> x.getSender().equals(user))
                 .map(messageMapper::fromEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    public List<MessageDTO> findConversationBetween(User user1, User user2) {
-        log.trace("Searching for all Messages sent between {} and {}", user1, user2);
-        return messageRepository.findAll()
+    public List<MessageDTO> findConversationBetween(String username1, String username2) {
+        log.trace("Searching for all Messages sent between {} and {}", username2, username1);
+        return messageRepository.findConversationBetween(username1, username2)
                 .stream()
-                .filter(x -> x.getSender().equals(user1))
-                .filter(x -> x.getReceiver().equals(user2))
                 .map(messageMapper::fromEntityToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<MessageDTO> findAllMessagesSentBefore(LocalDateTime localDateTime) {
